--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,7 +1,7 @@
 <!-- MENU -->
-<section id="menu" class="padded  bg-dot-sand dark-text menu grid-center">
+<section style="margin: 0 !important" id="menu" class="padded  bg-dot-sand dark-text menu grid-center">
   <div class="col-12 center">
-    <h2 class="text-lg red-text">menu.</h2>
+    <h2 class="text-lg red-text">Menu.</h2>
   </div>
 
   <!-- First column  -->
