--- a/_includes/head.html
+++ b/_includes/head.html
@@ -43,3 +43,6 @@
 
 <!------------ Custom Stylesheet   ------------>
 <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
+
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:opsz,wght@6..96,700;6..96,800&display=swap" rel="stylesheet">
