--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,21 +5,21 @@
   <div class="relative padded-t-1 padded-b-2 max-w-6xl">
     <h2 class="red-text">be there</h2>
     <h3 class="red-text">or be square.</h3>
-    <p class="dark-text strong text-shadow-lg">
+    <p class="red-text font-semibold strong text-shadow-lg ">
       <a
         href="mailto:vinnysbar@gmail.com"
         aria-label="Send email to vinnysbar@gmail.com"
         >email us: vinnysbar@gmail.com</a
       >
     </p>
-    <p class="dark-text text-shadow-lg">
+    <p class="red-text font-semibold text-shadow-lg">
       <a href="tel:+198384739374" aria-label="Call us at +1 983 847 39374"
         >call us: +198384739374</a
       >
     </p>
   </div>
 
-  <div class="relative sub-footer">
-    <p>Copyright 2023</p>
+  <div class="relative sub-footer red-text">
+    <p>Copyright 2025</p>
   </div>
 </footer>
