--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -22,10 +22,10 @@
            class="inline-flex items-center px-4 py-2 text-[#e8383b] font-semibold hover:text-white">
           Get directions
         </a>
-        <a href="#menu" class="inline-flex items-center px-4 py-2 text-[#e8383b] font-semibold hover:text-white">
+        <a href="#gallery" class="inline-flex items-center px-4 py-2 text-[#e8383b] font-semibold hover:text-white">
           Gallery
         </a>
-        <a href="#menu" class="inline-flex items-center px-4 py-2 text-[#e8383b] font-semibold hover:text-white">
+        <a href="#reserve" class="inline-flex items-center px-4 py-2 text-[#e8383b] font-semibold hover:text-white">
           Reserve
         </a>
       </nav>
